# portfolio

./: .gitignore  LICENSE  README.md
backend/: README.md  crayclk  piper-voice-server  rh-event-devices  rh-image-detector  rh-sensors  vlr-server  web-scraper
frontend/: README.md  mediamtx-client  piper-voice-client  vlr-client
projects/crayclk/: .gitignore  README.md  config.example.json  crayclk.service  pyproject.toml  uv.lock.aarch64
projects/crayclk/src/: clock.py  config.py  handlers.py  main.py  state.py
projects/home-bin/: .env-default  .gitignore  README.md
projects/manage-machines/: .gitignore  README.md  mm  package-lock.json  (+2 more)
projects/redhouse-platform/python/libs/rhpy/: MANIFEST.in  README.md  pyproject.toml
projects/redhouse-platform/python/libs/rhpy/rhpy/: __init__.py  colors_rgb.py  config.py  funcs.py  lifecycle.py  logger.py  main.py  model.py  performance.py  publisher.py  redis_client.py  schemas.py  settings.py  threads.py  timers.py
projects/redhouse-platform/python/libs/rhpy/rhpy/web/: __init__.py  main.py  server.py
projects/rh-event-devices/: .gitignore  README.md  pyproject.toml
projects/rh-event-devices/src/: config.py  handlers.py  main.py  oled_screen.py  prometheus.py  receiver.py  receiver_buzzer.py  receiver_camera_stream.py  receiver_led.py  receiver_oled_display.py  receiver_pixels.py  receivers.py  status_reporter.py
projects/rh-image-detector/: .gitignore  README.md  pyproject.toml
projects/rh-image-detector/src/: config.py  detectors.py  draw.py  main.py  notifiers.py  read_streams.py  servers.py  stats.py  streams.py
projects/rh-image-detector/src/models/: __init__.py  blazeface.py  mediapipe.py  yolo_face.py
projects/rh-sensors/: .gitignore  README.md  pyproject.toml  uv.lock.x86_64
projects/rh-sensors/src/: config.py  i2c_bus.py  main.py  prometheus.py  sensor.py
projects/rh-sensors/src/modules/: air_quality_mq135.py  atmosphere_bme680.py  barometric_bme280.py  battery_ina219.py  button.py  distance_hcsr04.py  distance_vl53l0x.py  gesture_paj7620u2.py  light_analog.py  light_digital.py  loudness_ky038.py  motion_am312.py  motion_hcsr501.py  rotary_ky040.py  soil_moisture_aideepen.py  temperature_ds18b20.py  thermohygrometer_am2302.py  total_disolved_solids_cqrobot.py  touch_device.py  uv_guvas12sd.py  vibration_sw420.py  water_drops.py  wind_speed_sen0170.py
projects/rh-sensors/src/sensors/: analog_read.py  battery.py  button.py  distance.py  event_detection.py  event_input_device.py  gpio.py  i2c.py  loop.py  onewire.py  rotary.py
projects/stream-screen/: .gitignore  README.md  pyproject.toml  uv.lock.x86_64
projects/stream-screen/src/: config.py  handlers.py  main.py  shared.py  splash.py  templates.py
projects/stream-screen/src/event/: __init__.py  emitter.py  events.py  payloads.py  stats.py  subscribers.py
projects/stream-screen/src/gst/: lib.py  manager.py  pipeline.py  sink.py
projects/stream-screen/src/gst/overlay/: __init__.py  color.py  detections.py  menus.py  name.py  notifications.py  overlay.py  stream_status.py  timestamp.py
projects/stream-screen/src/gst/stream/: __init__.py  background.py  overlay.py  rtsp.py  stream.py
projects/stream-screen/src/spi_screen/: __init__.py  st7789.py
projects/stream-screen/src/states/: __init__.py  active.py  notifications.py
projects/stream-screen/tests/: conftest.py  test_notification_template.py
(+409 files in other folders)
