[project]
name = "rh-sensors"
version = "0.1.0"
requires-python = "==3.13.5"
dependencies = [
    "adafruit-circuitpython-ads1x15>=3.0.2",
    "adafruit-circuitpython-bme280>=2.6.30",
    "adafruit-circuitpython-bme680>=3.7.14",
    "adafruit-circuitpython-dht>=4.0.10",
    "adafruit-circuitpython-ina219>=3.5.0",
    "adafruit-circuitpython-vl53l0x>=3.6.17",
    "evdev>=1.9.3",
    "gpiozero>=2.0.1",
    "rhpy[web]",
    "smbus>=1.1.post2",
]

[tool.uv.workspace]
members = [
    ".rhpy",
]

[tool.uv.sources]
rhpy = { workspace = true, editable = true }
